fix/extras were cut off

--- a/public/assets/base.css
+++ b/public/assets/base.css
@@ -56,7 +56,7 @@ body {
   display: inline-block;
   height: 20em;
   margin-top: 2em;
-  padding: 2em 3em;
+  padding: 3em 3em;
   overflow: hidden;
   text-align: center;
 }
