--- a/src/scss/_extras.scss
+++ b/src/scss/_extras.scss
@@ -6,7 +6,7 @@
         display: inline-block;
         height: 20em;
         margin-top: 2em;
-        padding: 2em 3em;
+        padding: 3em 3em;
         overflow: hidden;
         text-align: center;
 
